# AR

./: CMakeLists.txt  README  out_camera_data.xml
Calibrage/: calibre.cpp
Test/: test.cpp
conf/: in_VID5.xml
data/: mesh_color.glsl
include/: CamCalibration.h  Mire.h  Shader.h
lib/: mesh.cpp
src/: CamCalibration.cpp  Mire.cpp  Shader.cpp  main.cpp
